day5/wasm-edge-platform/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wasm-edge-platform
  labels:
    name: wasm-edge-platform
